src/gmWindow/style.css
/* ... */
#gmeditor_closebutton::after {
    background-image: url(images/gmeclose.png);
}

.gmeditor_wrap.clamp::after {
    background-image: url(images/gmeclamp.png);
    background-size: 20px;
}

.gmeditor_wrap.repeat::after {
    background-image: url(images/gmerepeat.png);
    background-size: 20px;
}

.gmeditor_filter::after {
    background-image: url(images/gmefilter.png);
    background-size: 18px;
}

.gmeditor_filter.nearest::after {
    image-rendering: crisp-edges;
    image-rendering: pixelated;
}

.gmeditor_filter.bilinear::after {
    image-rendering: optimizeQuality;
}

.gmeditor_download::after {
    background-image: url(images/gmedownload.png);
}

.gmeditor_delete::after {
    background-image: url(images/gmeclose2.png);
}

#gmworkspacearea {
    width: 100%;
    padding: 10px;
    box-sizing: border-box;
    flex-grow: 1;
}

#gmblocklydiv {
    position: absolute;
    padding: 10px;
    box-sizing: border-box;
}

#gmmonacodiv {
    z-index: 999;
    position: absolute;
    padding: 10px;
    box-sizing: border-box;
}

/* LOBBY MODS */

#newbonklobby_tooltip {
    display: -webkit-box;
    -webkit-line-clamp: 12;
    -webkit-box-orient: vertical;
    text-overflow: ellipsis;
}

#settingsContainer, #leaveconfirmwindowcontainer, #hostleaveconfirmwindowcontainer {
    z-index: 9999;
}

.modebuttoncontainer {
    display: flex;
    position: absolute;
    right: 15px;
    bottom: 55px;
    width: 116px;
}

#newbonklobby_modebutton {
    width: calc(50% - 62px);
    right: 55px;
}

#newbonklobby_modebutton.gm_withbonkhost {
    width: calc(100% - 42px);
    left: 0;
    bottom: -30px;
    position: absolute !important;
}

#gmeditor_openbutton {
    position: absolute;
    right: 15px;
    bottom: 55px;
    width: 30px;
    height: 30px;
    margin-left: 5px;
}

#gmeditor_openbutton::after {
    width: 30px;
    height: 30px;
    background-image: url(images/gmmlogo.png);
    background-size: 95%;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: center;
}

#gm_basemodetext {
    display: inline-block;
    color: var(--gm_secondary_text);
    font-size: 14px;
    pointer-events: none;
    margin-left: 5px;
}

/* DIALOG CLASSES */

.gm_behindblocker {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    outline: 3000px solid rgba(0,0,0,0.30);
    width: 1px;
    height: 1px;
}

.gm_dialogwindowcontainer {
    width: 100%;
    height: 100%;
    position: absolute;
    opacity: 0;
    visibility: hidden;
    z-index: 999999;
    transition: opacity 130ms ease-out;
}

.gm_dialogwindow {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: fit-content;
    max-width: 400px;
    height: fit-content;
    background-color: var(--gm_primary_background);
    color: var(--gm_primary_text);
    margin: auto;
    font-family: "futurept_b1";
    border-radius: 7px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.gm_dialogwindow *::-webkit-scrollbar-track {
	background-color: #d3d5d8;
}

.gm_dialogwindow *::-webkit-scrollbar {
    height: 12px;
    width: 0.8em;
	background-color: #d3d5d8;
}

.gm_dialogwindow *::-webkit-scrollbar-thumb {
    background-color: #abadb0;
}

.gm_dialogtopbar {
    background-color: var(--gm_window_color);
    width: 100%;
    height: 30px;
    line-height: 30px;
    color: var(--gm_window_text);
    font-family: "futurept_b1";
    text-align: center;
    font-size: 20px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}

.gm_dialogtext {
    color: var(--gm_primary_text);
    text-align: center;
    left: 0;
    right: 0;
    top: 53px;
    margin-top: 20px;
    margin-bottom: 10px;
}

#gmgeneric_message {
    text-align: center;
}

.gm_dialogbuttoncontainer {
    display: flex;
    align-content: stretch;
    width: 90%;
    justify-content: space-around;
}

.gm_dialogbuttoncontainer div {
    padding: 5px;
    margin: 10px;
    max-width: 150px;
    min-width: 100px;
    flex-grow: 1;
}

.gm_dialogcode {
    background-color: var(--gm_table_color);
    padding: 10px;
    overflow-wrap: anywhere;
    white-space: pre-wrap;
    user-select: text;
    text-align: left;
}

.gm_dialogoptions {
    color: var(--gm_primary_text);
    text-align: justify;
    left: 0;
    right: 0;
    top: 53px;
    width: fit-content;
    margin: 20px 20px 10px 20px;
}

.gm_dialogtextfield {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 15px;
    background: #fdfdfd;
    border: 1px solid #bdbdbd;
    color: #4e4e4e;
    width: 100%;
    min-width: 300px;
    height: 30px;
    padding-right: 4px;
    margin-top: 3px;
    resize: none;
}

.gm_horizontalflex {
    display: flex;
    justify-content: space-between;
}

.gm_horizontalsep {
    background-color: #00000022;
    width: 3px;
    margin: 20px;
}

.gm_dialoglist {
    display: flex;
    width: 400px;
    height: 290px;
    flex-direction: column;
    overflow-x: hidden;
    overflow-y: auto;
}

.gm_bartabs {
    position: relative;
    margin-top: 5px;
    width: 100%;
    height: 30px;
    display: flex;
}

.gm_bartabs span {
    position: absolute;
    height: 3px;
    width: 100%;
    background-color: var(--gm_button_primary_color);
    bottom: 0;
}

.gm_tabbutton {
    color: var(--gm_button_text);
    font-family: futurept_b1;
    text-align: center;
    background-color: var(--gm_button_primary_color);
    border-radius: 5px 5px 0 0;
    margin-left: 5px;
    padding: 0px 20px;
    line-height: 2;
    pointer-events: none;
}

.gm_tabbutton.inactive {
    background-color: var(--gm_button_secondary_color);
    cursor: pointer;
    pointer-events: all;
}

.gm_listheader {
    background-color: var(--gm_list_headers);
    border-bottom: 1px solid #00000012;
    padding-left: 5px;
    padding-top: 3px;
    padding-bottom: 3px;
    display: inline-block;
    font-size: 18px;
    pointer-events: none;
}
/* ... */

